# document-lib-python

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  README.md  documentapi.py  documentapiexception.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  testMap.json
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  cookbook-ex.py  cookbook.rst  index.rst
documentapi/: __init__.py  api.py  exception.py
tests/: test.py  testList.json  testMap.json
