[tool.poetry]
name = "document-lib-python"
version = "0.1.0"
description = "Document Library API for Python"
authors = ["Julian Nguyen <jnguyen@aerospike.com>"]
readme = "README.md"
homepage = "https://github.com/aerospike/document-lib-python"
packages = [{include = "documentapi"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aerospike/document-lib-python/issues"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.10"
jsonpath-ng-aerospike = "^1.5.3"
aerospike = ">=6.0,<13.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
build = "^0.8.0"
twine = "^4.0.1"
sphinx_rtd_theme = "^1.0.0"
sphinxcontrib-spelling = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
